Changelog
=========

3.0b2 (unreleased)
------------------

- Forward compatibility for Zope 4 removal of RequestContainer.

- Optimize brain instantiation, by creating underlying record items in a
  single step, instead of creation and three update calls.

3.0b1 (2012-07-19)
------------------

- LP #727981: Fix DateIndex ZMI browsing for dates in the first month of a
  year.

- Unify Unindex and DateIndex search logic (`_apply_index`) adding `not`
  support to DateIndexes.

3.0a2 (2012-04-26)
------------------

- Fixed another issue with preserving score values, when a custom index was
  queried first which was neither ILimitedResultIndex aware nor return scores,
  and a later index was of the default ZCTextIndex type.

3.0a1 (2012-04-22)
------------------

- Expand query report, to cover details on sort indexes, order and limits.

- As part of each progress handler report, also do an automatic transaction
  savepoint, to give the ZODB cache a chance to do garbage collection.

- Added a `threshold` argument to the catalog's `addColumn` and `delColumn`
  methods and used it for a progress handler. Also optimized some of their
  internals.

- Added support for `sort_on` queries with any number of sort indexes and
  differing `sort_order` values. For example:
  `{'foo': 'a', 'sort_on': ('foo', 'bar')}`
  `{'foo': 'a', 'sort_on': ('foo', 'bar'), 'sort_order': ('', 'reverse')}`
  `{'foo': 'a', 'sort_on': ('foo', 'bar', 'baz')}`

- Added support for `not` queries in field and keyword indexes. Both
  restrictions of normal queries and range queries are supported, as well as
  purely exclusive queries. For example:
  `{'foo': {'query': ['a', 'ab'], 'not': 'a'}}`
  `{'foo': {'query': 'a', 'range': 'min', 'not': ['a', 'e', 'f']}}`
  `{'foo': {'not': ['a', 'b']}}`.
  Note that negative filtering on an index still restricts items to those
  having a value in the index. So with 10 documents, 5 of them in the `foo`